--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,16 @@
   </dependencies>
 
   <build>
+
+  <resources>
+        <resource>
+            <directory>$homedeliveryapp/language</directory>
+            <includes>
+                <include>eng.traineddata</include>
+            </includes>
+        </resource>
+    </resources>
+    
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
